--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       
     </div>
     <div class="description">
-        <span>"Guardo algo especial para ti, espero que te guste."!!</span>
+        <span>" Feliz Cumpleaños Nati! Guardo algo especial para ti, espero que te guste."!!</span>
     </div>
     <div class="button">
         <button>
