--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       
     </div>
     <div class="description">
-        <span>"Para Mariangel La niña mas hermosa del mundo!! algo especial para ti, espero que te guste."!!</span>
+        <span>¡Por si no te las dieron hoy...! Espero que te gusten. ❤️</span>
     </div>
     <div class="button">
         <button>
