--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       
     </div>
     <div class="description">
-        <span>¡Por si no te las dieron hoy...! Espero que te gusten. ❤️</span>
+        <span>¡Por si no te las dieron hoy...! La extraño... Espero que te gusten. ❤️</span>
     </div>
     <div class="button">
         <button>
